-
Bug
-
Resolution: Fixed
-
P3
-
8u112, 9
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8163159 | 8u152 | Murali Billa | P3 | Resolved | Fixed | b01 |
| JDK-8163409 | 8u112 | Murali Billa | P3 | Resolved | Fixed | b08 |
It seems like, that the "general sibling" css selector does not work in
connection with the checked pseudo class in the Javafx WebView version
1.8.0_112_ea.
It does work in the build 1.8.0.91.
You can easily reproduce the bug by using the attached html file.
- backported by
-
JDK-8163159 General sibling selector is broken for selected input boxes in WebView
-
- Resolved
-
-
JDK-8163409 General sibling selector is broken for selected input boxes in WebView
-
- Resolved
-