8162977: General sibling selector is broken for selected input boxes in WebView Reviewed-by: kcr, arajkumar